# beermachine

./: README.md
api/: .gitignore  Sibintek.BeerMachine.sln  Sibintek.BeerMachine.sln.DotSettings
api/examples/: customers_example.json
api/src/Sibintek.BeerMachine/: DevIds.json  Program.cs  Sibintek.BeerMachine.csproj  Startup.cs  appsettings.Development.json  appsettings.json  libman.json  nlog.config
api/src/Sibintek.BeerMachine/BlockchainClient/: BlockchainReportResponse.cs  BlockсhainClient.cs  IBlockсhainClient.cs  MockBlockсhainClient.cs  (+3 more)
api/tests/Sibintek.BeerMachine.Tests/: ShoppingCartServiceTests.cs  Sibintek.BeerMachine.Tests.csproj
api/tests/Sibintek.BeerMachine.Tests.Integration/: ShoppingCartServiceTests.cs  Sibintek.BeerMachine.Tests.Integration.csproj
beercoin/: .gitignore  Cargo.toml
beercoin/deploy/: beercoin.service  common.toml  env.sh  generate_config.sh  node_1_cfg.toml  node_2_cfg.toml  node_3_cfg.toml  node_4_cfg.toml  node_5_cfg.toml  pub_1.toml  pub_2.toml  pub_3.toml  pub_4.toml  pub_5.toml  sec_1.toml  sec_2.toml  sec_3.toml  sec_4.toml  sec_5.toml
beercoin/deploy/beer/: log.sh  start.sh  status.sh  stop.sh
beercoin/example/: beercoin.postman_collection.json  issue.json  pay.json
beercoin/local/: common.toml  generate_config.sh  node_1_cfg.toml  node_2_cfg.toml  node_3_cfg.toml  pub_1.toml  pub_2.toml  pub_3.toml  run.md  sec_1.toml  sec_2.toml  sec_3.toml
beercoin/src/: api.rs  config.rs  lib.rs  main.rs  schema.rs  transactions.rs  wallet.rs
beercoin/tests/: api.rs
docs/: 20190224 Программа Совещания ИТ.xlsx
(+74 files in other folders)
